# molex-browser

./: .cirrus.yml  .gitignore
.github/workflows/: build_android.yml  build_linux.yml  build_windows.yml
molex/: BUILD.gn
molex/.github/workflows/: build_android.yml  build_linux.yml  build_windows.yml
molex/docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md
molex/molex_patches/branding/: chrome_app_settings.gni  molex_branding.h  visual_elements.gni
molex/molex_patches/features/: BUILD.gn  molex_features.cc  molex_features.h
molex/molex_patches/ui/bookmarks/: bookmarks_m3_patch.h
molex/molex_patches/ui/downloads/: downloads_m3_patch.h
molex/molex_patches/ui/incognito/: incognito_m3_patch.h
molex/molex_patches/ui/material_you/: BUILD.gn  m3_color_scheme.cc  m3_color_scheme.h  m3_shape_tokens.cc  m3_shape_tokens.h  m3_theme.cc  m3_theme.h  m3_typography.cc  m3_typography.h
molex/molex_patches/ui/menu/: app_menu_m3_patch.h
molex/molex_patches/ui/omnibox/: omnibox_m3_patch.cc  omnibox_m3_patch.h
molex/molex_patches/ui/settings/: settings_m3_patch.h
molex/molex_patches/ui/tabs/: tab_strip_m3_patch.cc  tab_strip_m3_patch.h
